# O2

./: .breakpoints  main.py  pyproject.toml
funcs/: database.py  logger.py  login.py  plugins.py  settings.py  users.py  utilityTemplates.py
plugins/adder/: adder.py
plugins/file_manager/: file_manager.py
plugins/subtractor/: subtractor.py
templates/: dashboard.html  index.html  login.html
